--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import "../styles/theme.css";
 import "../styles/global.css";
 
 import Header from "../components/Header.astro";
-import Footer from "../components/Footer";
+import Footer from "../components/Footer.astro";
 ---
 
 <Header />
