--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,42 +1,36 @@
 ---
+import SpeedInsights from "@vercel/speed-insights/astro";
+
 import Navbar from "./Navbar.astro";
 
 import { siteInfo } from "../data/siteMetadata.ts";
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Astro description" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-    <meta name="msapplication-TileColor" content="#0088cc" />
-    <meta name="theme-color" content="#0088cc" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="favicon/apple-touch-icon.png"
-    />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="/favicon/safari-pinned-tab.svg"
-      color="#0088cc"
-    />
-    <link rel="canonical" href="https://toodear.rocks" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{siteInfo.title}</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Astro description" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+  <meta name="msapplication-TileColor" content="#0088cc" />
+  <meta name="theme-color" content="#0088cc" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico" />
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="favicon/apple-touch-icon.png"
+  />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0088cc" />
+  <link rel="canonical" href="https://toodear.rocks" />
+  <meta name="generator" content={Astro.generator} />
+  <title>{siteInfo.title}</title>
+  <SpeedInsights />
+</head>
 
-  <Navbar />
-
-
-</html>
+<Navbar />
