--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import Slider from "../components/Slider.astro";
       </InfoBox>
       <InfoBox heading="Goal">
         <p>
-          I <abbr title="past tense">liked</abbr> to design beautiful &amp; unique
-          websites, user interfaces using accessibility &amp; usability guidelines
+          I <abbr title="sadly, past tense 😢">liked</abbr> to design beautiful &amp;
+          unique websites, user interfaces using accessibility &amp; usability guidelines
           for rich user experience.
         </p>
       </InfoBox>
