--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,7 @@
 /* TAILWINDCSS https://tailwindcss.com */
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+@import "tailwindcss";
