Fix(package):Broken build, after dependencies update
Fix(style):Theme variables declaration

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,8 @@ import "@fontsource/rubik/400.css";
 import "@fontsource/rubik/700.css";
 import "@fontsource/fira-sans/400.css";
 import "@fontsource/fira-sans/700.css";
-import "../styles/base.css";
-import "../styles/theme.css";
+// import "../styles/base.css";
+// import "../styles/theme.css";
 import "../styles/global.css";
 
 import Header from "../components/Header.astro";
@@ -14,7 +14,7 @@ import Footer from "../components/Footer.astro";
 <!doctype html>
 <html lang="en">
   <Header />
-  <body>
+  <body class="">
     <slot />
     <Footer />
   </body>
