--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,10 +3,9 @@ import { siteInfo } from "../data/siteMetadata.ts";
 ---
 
 <section class="row">
-  <h1 class="siteDesc">{siteInfo.description}</h1>
+  <h1 class="lg:text-5xl text-4xl">{siteInfo.description}</h1>
   <h2 class="lg:text-5xl text-4xl">
-    <span
-      class="text-gradient bg-gradient-to-r from-color-primary to-color-secondary"
+    <span class="text-gradient bg-linear-to-r from-primary to-secondary"
       >That rocks!</span
     >
     <span role="img" aria-label="Rocking and rocket emojis">🤘🏻🚀</span>
