--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,16 @@
 /* TOODEAR.ROCKS @ https://toodear.vercel.app */
 
+@import "tailwindcss";
+@import "./theme.css";
+
+:root {
+    color-scheme: light dark;
+}
 html {
     @apply w-full;
 }
 body {
-    @apply border-t-8 bg-color-bg text-color-text;
+    @apply border-t-8 bg-bg text-text;
     border-image: linear-gradient(90deg, var(--color-primary) 20%, var(--color-secondary)) 1;
     /* font-family: "Alegreya", serif; */
     font-family: "Rubik", sans-serif;
@@ -40,10 +46,8 @@ h1, h2, h3, h4, h5, h6 {
     @apply font-bold text-black;
 }
 h1 {
-    @apply lg:text-5xl text-4xl;
 }
 h2 {
-    @apply lg:text-4xl text-3xl;
 }
 h3 {
     @apply lg:text-3xl text-2xl;
