--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -6,21 +6,22 @@
 
 /* COLORS */
 
-:root {
-    --color-primary: #0088cc;
-    --color-secondary: #c214cc;
-    --color-black: #17111d;
-    --color-white: #faf8ff;
-    --color-gray: #4e4556;
-    --color-light-gray: #e9e5ef;
-    --color-danger: #e53a40;
-    --color-success: #89d144;
-    --color-warning: #efdc05;
-    --color-bg: var(--color-white);
-    --color-text: var(--color-black);
-    --color-card: var(--color-light-gray);
-    --color-footer: var(--color-light-gray);
-}
+@theme {
+  --color-primary: #0088cc;
+  --color-secondary: #c214cc;
+  --color-black: #17111d;
+  --color-white: #faf8ff;
+  --color-gray: #4e4556;
+  --color-light-gray: #e9e5ef;
+  --color-danger: #e53a40;
+  --color-success: #89d144;
+  --color-warning: #efdc05;
+
+  /* Theme variables that map to utilities */
+  --color-bg: var(--color-white);
+  --color-text: var(--color-black);
+  --color-card: var(--color-light-gray);
+  --color-footer: var(--color-light-gray);}
 
 [data-theme='dark'] {
     --color-bg: var(--color-black);
