--- a/src/components/InfoBox.astro
+++ b/src/components/InfoBox.astro
@@ -2,7 +2,8 @@
 const { heading } = Astro.props;
 ---
 
-<div class="lg:w-1/3 px-8 lg:py-8">
+<!-- <div class="lg:w-1/3 px-8 lg:py-8"> -->
+<div>
   <h3>{heading}.</h3>
   <slot />
 </div>
