--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,13 +8,15 @@ import "@fontsource/fira-sans/700.css";
 import "../styles/global.css";
 
 import Header from "../components/Header.astro";
+import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
 <html lang="en">
   <Header />
-  <body class="">
+  <body>
+    <Navbar />
     <slot />
     <Footer />
   </body>
