style:Transition from TWCSS to VanillaCSS still in progress

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ while (astroVersion.charAt(0) === "^") {
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="row">
+<footer class="breathe limit-width center">
   <h3>Meanwhile, elsewhere...</h3>
   <ul class="mb-4">
     <li>
