--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import { siteInfo } from "../data/siteMetadata.ts";
 ---
 
-<section class="row breathe">
+<section class="breathe">
   <h1 class="lg:text-5xl text-4xl">{siteInfo.description}</h1>
   <h2 class="lg:text-5xl text-4xl">
     <span class="text-gradient bg-linear-to-r from-primary to-secondary"
