--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import { siteInfo } from "../data/siteMetadata.ts";
 import navigation from "../data/navigation.ts";
 ---
 
-<header class="row max-width center">
+<header class="row limit-width center">
   <nav>
     <a href="/" class="siteTitle">I am {siteInfo.title}.</a>
     <ul>
