--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import Slider from "../components/Slider.astro";
 
     <Slider />
 
-    <section class="row">
+    <section class="greatness breathe">
       <h3>
         Pro bono? <span
           role="img"
