style:VanillaCSS ongoing update

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -7,7 +7,7 @@ import Slide from "./Slide.astro";
 ---
 
 <section
-  class="splide row bg-gray-200 md:rounded-lg breathe"
+  class="splide slider row rounded-corners breathe"
   aria-label="Discography Carousel"
   role="group"
 >
