--- a/src/components/InfoBox.astro
+++ b/src/components/InfoBox.astro
@@ -3,7 +3,9 @@ const { heading } = Astro.props;
 ---
 
 <!-- <div class="lg:w-1/3 px-8 lg:py-8"> -->
-<div>
-  <h3>{heading}.</h3>
+<article>
+  <header>
+    <h3>{heading}.</h3>
+  </header>
   <slot />
-</div>
+</article>
