--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Slider from "../components/Slider.astro";
     <!-- <article
       class="container mx-auto mt-24 lg:p-8 lg:flex lg:items-stretch lg:mt-40"
     > -->
-    <article class="shackless breathe">
+    <section class="shackless breathe">
       <div class="grid">
         <InfoBox heading="About">
           <p>
@@ -40,7 +40,7 @@ import Slider from "../components/Slider.astro";
           </p>
         </InfoBox>
       </div>
-    </article>
+    </section>
 
     <Slider />
 
