--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,24 +10,31 @@
     background-color: var(--color-bg);
     color: var(--color-text);
     /* @apply border-t-8 bg-bg text-text; */
-    
+
+    /* VARIABLES */
+    --breakpoint: 48rem;
 }
 
 body {
     border-top-width: 8px;
     border-image: linear-gradient(90deg, var(--color-primary) 20%, var(--color-secondary)) 1;
-    padding: 2rem;
-    @media (min-width: 64rem) {
-        padding: 0;
+    padding-inline: 1rem;
+    @media (min-width: var(--breakpoint)) {
+        padding-inline: 0;
     }
 }
 
 
+
+/* LAYOUT */
+
 .content-grid {
+    /* padding-inline: 2rem; */
     display: grid;
-    grid-template-columns: 1fr [shackless-start] 1fr [greatness-start] 48rem [greatness-end] 1fr [shackless-end] 1fr;
-    @media (max-width: 64rem) {
-        grid-template-columns: 1fr;
+    grid-template-columns: [full-width-start] 1fr [shackless-start] 1fr [greatness-start] min(100%, 48rem) [greatness-end] 1fr [shackless-end] 1fr [full-width-end];
+    container: content-grid / inline-size;
+    @media (min-width: var(--breakpoint)) {
+        grid-template-columns: repeat(30ch, 100%), 1fr;
     }
 }
 .content-grid > * {
@@ -38,20 +45,34 @@ body {
 }
 .grid {
     display: grid;
-    /* grid-template-columns: repeat(auto-fit, minmax(33%, 1fr)); */
-    gap: 1rem;
-    @media (width >= 64rem) {
+    /* grid-template-columns: min(100%, var(--breakpoint)); */
+    gap: 2rem;
+    container: grid / inline-size;
+    @media (min-width: 48rem) {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-/* UTILITIES */
 
-.text-gradient {
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+/* DEFAULT (aka SITE-WIDE) STYLING */
+nav ul {
+    float: right;
 }
-
+nav li {
+    flex-wrap: wrap;
+    /* flex-grow: 1; */
+    display: inline-flex;
+    margin-left: 1rem;
+    font-size:  1rem;
+    line-height: 1.5;
+}
+nav li a {
+    text-decoration: none;
+}
+nav li a:hover {
+    color: var(--color-secondary);
+}
 a {
     /* @apply shadow-link text-black; */
     color: var(--color-text);
@@ -71,16 +92,18 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Fira Sans", sans-serif;
     font-weight: 700;
     color: var(--color-text);
-    /* @apply font-bold text-black; */
 }
-h1 {
-}
-h2 {
+h1, h2 {
+    font-size: 2.25rem;
+    line-height: 1.2;
+    @media (min-width: var(--breakpoint)) {
+        font-size: 3rem;
+    }
 }
 h3 {
     font-size: 1.5rem;
     line-height: 1.33;
-    @media (width >= 64rem) {
+    @media (min-width: var(--breakpoint)) {
         font-size: 1.875rem;
         line-height: 1.2;
     }
@@ -92,6 +115,9 @@ p, li {
     margin-bottom: 1.5rem;
     /* @apply text-xl mb-6; */
 }
+p:last-child {
+    margin-bottom: 0;
+}
 li {
     margin-bottom: 0.25rem;
     /* @apply mb-1; */
@@ -101,54 +127,44 @@ strong {
     /* @apply bg-yellow-100; */
 }
 
+
+
+/* UTILITIES */
 /* HAVING-HARD-TIME-NAMING-THINGS */
-.limit-width {
-    max-width: 48rem;
+
+.breathe {
+    margin-top: 8rem;
+    @media (min-width: var(--breakpoint)) {
+        margin-top: 12rem;
+    }
 }
 .center {
     margin-inline: auto;
 }
-.row {
-    padding: 2rem 0;
-    @media (max-width: 64rem) {
-        padding: 0;
-    }
-    /* @apply
-        mt-24 mx-auto p-8
-        lg:px-0 lg:mt-40
-        max-w-3xl; */
+.limit-width {
+    max-width: var(--breakpoint);
 }
-.breathe {
-    margin-top: 8rem;
-    @media (min-width: 64rem) {
-        margin-top: 16rem;
-    }
+.row {
+    padding-block: 1rem;
+
+    /* @apply
+    mt-24 mx-auto p-8
+    lg:px-0 lg:mt-40
+    max-w-3xl; */
+}
+.rounded-corners {
+    border-radius: .5rem;
+}
+.text-gradient {
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.slider {
+    background-color: var(--color-light-gray)
 }
 
 a.siteTitle {
     @apply
         w-1/3
         text-lg font-bold;
-}
-nav ul {
-    float: right;
-}
-nav li {
-    flex-wrap: wrap;
-    /* flex-grow: 1; */
-    display: inline-flex;
-    margin-left: 1rem;
-    @apply text-base
-}
-nav li a {
-    text-decoration: none;
-}
-nav li a:hover {
-    color: var(--color-secondary);
-}
-
-
-
-.siteDesc {
-    margin-bottom: 0 !important;
 }
