style:Gradient text now vanilla CSS

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,11 +3,12 @@ import { siteInfo } from "../data/siteMetadata.ts";
 ---
 
 <section class="breathe">
-  <h1 class="lg:text-5xl text-4xl">{siteInfo.description}</h1>
-  <h2 class="lg:text-5xl text-4xl">
+  <h1>{siteInfo.description}</h1>
+  <h2>
     <span class="text-gradient bg-linear-to-r from-primary to-secondary"
       >That rocks!</span
     >
+    <span class="text-gradient">That rocks!</span>
     <span role="img" aria-label="Rocking and rocket emojis">🤘🏻🚀</span>
   </h2>
 </section>
