--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -7,11 +7,11 @@ import Slide from "./Slide.astro";
 ---
 
 <section
-  class="splide slider row rounded-corners breathe"
+  class="splide slider rounded-corners breathe full-width"
   aria-label="Discography Carousel"
   role="group"
 >
-  <div class="splide__track sm:max-w-prose sm:mx-auto">
+  <div class="splide__track center">
     <ul class="splide__list">
       <Slide
         imgsrc={albumCover}
