--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import navigation from "../data/navigation.ts";
 
 <header class="row limit-width center">
   <nav>
-    <a href="/" class="siteTitle">I am {siteInfo.title}.</a>
+    <a href="/" class="title">I am {siteInfo.title}.</a>
     <ul>
       {
         navigation.map((i) => (
