--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,7 @@ import "@fontsource/rubik/400.css";
 import "@fontsource/rubik/700.css";
 import "@fontsource/fira-sans/400.css";
 import "@fontsource/fira-sans/700.css";
-// import "../styles/base.css";
-// import "../styles/theme.css";
+import "/node_modules/destyle.css/destyle.min.css"
 import "../styles/global.css";
 
 import Header from "../components/Header.astro";
