style:Drop shadow and paddings on slider images transferred to vanilla CSS

--- a/src/components/Slide.astro
+++ b/src/components/Slide.astro
@@ -6,9 +6,9 @@ const { imgsrc, imgalt, imgcaption, title } = Astro.props;
 
 <li class="splide__slide slide">
   <div class="slide__image">
-    <figure class="padding-h-sm">
+    <figure class="padding-sm">
       <Image
-        class="rounded-corners shadow-md shadow-slate-500"
+        class="rounded-corners"
         src={imgsrc}
         alt={imgalt}
       />
