--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,9 +143,12 @@ strong {
 .slide__image {
   padding: 4rem;
 }
+.slide__image img {
+  box-shadow: 0 0.25rem 0.55rem oklch(from var(--color-gray) l c h / 0.5);
+}
 .slide__text {
-  padding-inline: 1rem;
-  padding-bottom: 2rem;
+  padding-inline: 2rem;
+  padding-block: 0 4rem;
 }
 
 /* UTILITIES */
@@ -173,11 +176,8 @@ strong {
 .limit-width {
   max-width: var(--breakpoint);
 }
-.padding-h-sm {
-  padding-inline: 1rem;
-}
-.padding-h-md {
-  padding-inline: 2rem;
+.padding-sm {
+  padding: 1rem;
 }
 .row {
   padding-block: 1rem;
@@ -233,5 +233,6 @@ strong {
   }
   .slide__text {
     width: 66.666667%;
+    padding-block: 2rem 0;
   }
 }
