--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,6 +63,13 @@ a {
   text-decoration-color: var(--color-primary);
   text-decoration-thickness: 0.25rem;
   text-underline-offset: 0.25rem;
+  transition: all 0.1s ease-in-out;
+
+  /* So it does not flash after :hover (when removing pointer from the hyperlink) */
+  background: linear-gradient(to bottom, var(--gradient-colors)) text;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: var(--color-text); /* matches normal color */
 }
 a:hover {
   background: linear-gradient(to bottom, var(--gradient-colors)) text;
