style:Vanillization completed
todo: .small-text to be fixed to work seamlessly across

--- a/src/components/Slide.astro
+++ b/src/components/Slide.astro
@@ -12,7 +12,7 @@ const { imgsrc, imgalt, imgcaption, title } = Astro.props;
         src={imgsrc}
         alt={imgalt}
       />
-      <figcaption class="text-gray-400">
+      <figcaption class="color-gray-600 smaller-text">
         {imgcaption}
       </figcaption>
     </figure>
