--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,10 +7,7 @@ import Layout from "../layouts/Layout.astro";
     <section class="row">
       <h1>
         <span
-          class="text-gradient
-          bg-gradient-to-r
-          from-color-primary
-          to-color-secondary"
+          class="text-gradient"
           >This is a Contact Page.</span
         >
       </h1>
