--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,9 @@ import Slider from "../components/Slider.astro";
 
 <Layout>
   <main class="content-grid">
+
     <Hero />
-    <!-- <article
-      class="container mx-auto mt-24 lg:p-8 lg:flex lg:items-stretch lg:mt-40"
-    > -->
+
     <section class="shackless breathe">
       <div class="grid">
         <InfoBox heading="About">
@@ -31,7 +30,7 @@ import Slider from "../components/Slider.astro";
           <p>I'm <i>kind of</i> not available for work, at the moment.</p>
           <p>
             <a href="/contact">Get in touch!</a><br /><span
-              class="text-base text-color-gray"
+              class="smaller-text color-gray-600"
               >(currently, nothing to see there <span
                 role="img"
                 aria-label="Skull emoji">💀</span
